<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Poll Booth</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="login">User Login :</string>
    <string name="user_name">User Name : </string>
    <string name="user_hint">Enter User Name</string>
    <string name="password">Password : </string>
    <string name="pwd_hint">Enter Password</string>
    <string name="age">Age : </string>
    <string name="age_hint">Enter Age</string>
    <string name="register_new">Register New</string>
    <string name="ok">OK</string>
    <string name="clear">Clear</string>
    <string name="poll_page">Polls</string>

</resources>
